fixed first mistake

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </thead>
         <tbody>
             <tr>
-                <td>2003 - 2018</td>
+                <td>2006 - 2018</td>
                 <td>Sri Aurobindo Integral Education Centre</td>
             </tr>
             <tr>
                 <td>2018 - 2020</td>
-                <td>Dhenkanal Higher Secondary Scool and Education</td>
+                <td>Dhenkanal Higher Secondary School and Education</td>
             </tr>
             <tr>
                 <td>2022 - 2025</td>
