--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contaact Page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <p>My Address: AHS 136, Anantapur, Kamakhyanagar, Dhenkanal, Odisha, India</p>
